<resources>
    <string name="app_name">LabsCM20221-Gr05</string>
    <string name="appbar_personal_info">Información personal</string>
    <string name="input_hint_names">Nombres</string>
    <string name="input_hint_surnames">Apellidos</string>
    <string name="label_sex">Sexo:</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="label_date">Fecha de nacimiento:</string>
    <string name="button_date">Cambiar</string>
    <string name="educational_stage">Grado de escolaridad</string>
    <string name="next">Siguiente</string>
    <string name="input_hint_phone">Telefono</string>
    <string name="input_hint_email">Correo</string>
    <string name="input_hint_country">País</string>
    <string name="input_hint_city">Ciudad</string>
    <string name="input_hint_address">Direccion</string>
    <string-array name="genres">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

    <string-array name="grades">
        <item>Primaria</item>
        <item>Secundaria</item>
        <item>Universitaria</item>
        <item>Otro</item>
    </string-array>
</resources>