<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactData">

    <EditText
        android:id="@+id/input_phone"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/input_hint_phone"
        android:inputType="number"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toEndOf="@+id/icon_names"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/input_hint_email"
        android:inputType="textEmailAddress"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toEndOf="@+id/icon_names"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <EditText
        android:id="@+id/input_country"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/input_hint_country"
        android:inputType="textFilter"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toEndOf="@+id/icon_names"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <EditText
        android:id="@+id/input_city"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/input_hint_city"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toEndOf="@+id/icon_names"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <EditText
        android:id="@+id/input_address"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/input_hint_address"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <ImageView
        android:id="@+id/imageViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_address_24"
        tools:layout_editor_absoluteX="81dp"
        tools:srcCompat="@drawable/ic_baseline_email_24" />

    <ImageView
        android:id="@+id/imageViewCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_address_24"
        tools:layout_editor_absoluteX="81dp"
        tools:srcCompat="@drawable/ic_baseline_location_24" />

    <ImageView
        android:id="@+id/imageViewCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_city_24"
        tools:layout_editor_absoluteX="81dp" />

    <ImageView
        android:id="@+id/imageViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_address_24"
        tools:layout_editor_absoluteX="81dp" />

    <ImageView
        android:id="@+id/imageViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_local_phone_24"
        tools:layout_editor_absoluteX="81dp" />

    <Button
        android:id="@+id/nextContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="633dp" />

</androidx.constraintlayout.widget.ConstraintLayout>